force-app/main/default/objects/Student_Application__c/Student_Application__c.object-meta.xml
<CustomObject>
    <label>Student Application</label>
    <nameField>
        <displayFormat>AID-{0000}</displayFormat>
        <label>Student Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>