force-app/main/default/objects/Student_Application__c/fields/Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term__c</fullName>
    <label>Academic Term</label>
    <length>55</length>
    <type>Text</type>
</CustomField>