force-app/main/default/objects/Student_Application__c/fields/Application_Tier__c.field-meta.xml
<CustomField>
    <fullName>Application_Tier__c</fullName>
    <label>Application Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Decision</fullName>
            </value>
            <value>
                <fullName>Early Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>