force-app/main/default/objects/Student_Application__c/fields/Learning_Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Learning_Program_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Program Plan (C)</label>
    <referenceTo>Learning_Program_Plan__c</referenceTo>
    <relationshipLabel>Student Applications</relationshipLabel>
    <relationshipName>Student_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>