force-app/main/default/objects/Student_Application__c/fields/Student_Account__c.field-meta.xml
<CustomField>
    <fullName>Student_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Student Applications</relationshipLabel>
    <relationshipName>Student_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>