force-app/main/default/objects/Student_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student_Account__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Applied_Date__c</columns>
    <columns>Learning_Program__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>